infra/k8s/rokkitpokkit/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rokkitpokkit
spec:
  selector:
    app: rokkitpokkit
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
