infra/k8s/rokkitpokkit/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public
spec:
  addresses:
    - type: IPAddress
      value: 167.235.132.134
    - type: IPAddress
      value: 91.98.169.183
    - type: IPAddress
      value: 178.104.65.17
  gatewayClassName: cilium
  listeners:
    - name: http
      hostname: "*.samcday.com"
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      hostname: "*.samcday.com"
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - name: rokkitpokkit-public-tls
      allowedRoutes:
        namespaces:
          from: Same
