infra/k8s/rokkitpokkit/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rokkitpokkit
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
spec:
  hostnames:
    - rokkitpokkit.samcday.com
    - xn--nu8h3y.samcday.com
  parentRefs:
    - name: public
      namespace: ingress-nginx
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: rokkitpokkit
          port: 80
